# simple-markdown-viewer

./: .gitignore  AGENTS.md  CMakeLists.txt  DEVELOPMENT_PLAN.md  LICENSE  README.md  THIRD_PARTY_NOTICES  build.ps1  build.sh
.github/workflows/: publish-skia-bundle.yml  windows-build.yml
ci/: skia-bundle-version.txt
resources/: app.rc
src/: main.cpp
src/app/: app_config.cpp  app_config.h  app_state.h  document_loader.cpp  document_loader.h  heading_anchor.cpp  heading_anchor.h  link_resolver.cpp  link_resolver.h  viewer_controller.cpp  viewer_controller.h
src/layout/: document_model.h  layout_engine.cpp  layout_engine.h
src/markdown/: markdown_parser.cpp  markdown_parser.h
src/platform/linux/: linux_app.cpp  linux_app.h  linux_clipboard.cpp  linux_clipboard.h  linux_context_menu.cpp  linux_context_menu.h  linux_file_dialog.cpp  linux_file_dialog.h  linux_font_dialog.cpp  linux_font_dialog.h  linux_interaction.cpp  linux_interaction.h  linux_main.cpp  linux_menu.cpp  linux_menu.h  linux_shell.cpp  linux_shell.h  linux_surface.cpp  linux_surface.h  linux_viewer_host.cpp  linux_viewer_host.h
src/platform/win/: win_app.cpp  win_app.h  win_clipboard.cpp  win_clipboard.h  win_context_menu.cpp  win_context_menu.h  win_crash_handler.cpp  win_crash_handler.h  win_file_dialog.cpp  win_file_dialog.h  win_file_watcher.cpp  win_file_watcher.h  win_interaction.cpp  win_interaction.h  win_main.cpp  win_menu.cpp  win_menu.h  win_shell.cpp  win_shell.h  win_surface.cpp  win_surface.h  win_viewer_host.cpp  win_viewer_host.h  win_window.cpp  win_window.h
src/render/: document_renderer.cpp  document_renderer.h  document_typefaces.cpp  document_typefaces.h  image_cache.cpp  image_cache.h  menu_renderer.cpp  menu_renderer.h  pdf_exporter.cpp  pdf_exporter.h  print_document.cpp  print_document.h  theme.cpp  theme.h  typography.cpp  typography.h
src/render/syntax/: tree_sitter_highlighter.cpp  tree_sitter_highlighter.h  tree_sitter_queries.h
src/util/: file_io.cpp  file_io.h  skia_font_utils.cpp  skia_font_utils.h  utf8.cpp  utf8.h
src/view/: document_context_menu.cpp  document_context_menu.h  document_hit_test.cpp  document_hit_test.h  document_interaction.cpp  document_interaction.h  document_outline.cpp  document_outline.h  scroll_anchor.h
test-docs/: markdown-rendering-fixture.md
tests/: unit_tests.cpp
